<resources>
    <string name="app_name">Calculator-inator</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="invert">INV</string>
    <string name="radian">RAD</string>
    <string name="degree">DEG</string>
    <string name="percent">%</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="root">√</string>
    <string name="pi">π</string>
    <string name="euler_num">e</string>
    <string name="power">^</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="factorial">!</string>
    <string name="natural_log">ln</string>
    <string name="title_activity_settings">Settings</string>


    <string name="delete_message">"Your Calculation History will be deleted. Do you want to proceed?"</string>

    <!-- Preference Titles -->
    <string name="title_appearance">Appearance</string>
    <string name="length">Length</string>
    <string name="area">Area</string>
    <string name="mass">Mass</string>
    <string name="speed">Speed</string>
    <string name="angle">Angle</string>
    <string name="data">Data</string>
    <string name="volume">Volume</string>
    <string name="time">Time</string>
    <string name="temperature">Temperature</string>
    <string name="asin">sin⁻¹</string>
    <string name="acos">cos⁻¹</string>
    <string name="atan">tan⁻¹</string>
    <string name="tenRaisedTo">10^</string>
    <string name="eRaisedTo">e^</string>
    <string name="square">^2</string>
    <string name="error_text">Not a Number</string>
    <string name="backspace">⌫</string>
    <string name="calculator">Calculator</string>
    <string name="converter">Converter</string>
    <string name="currency">Currency</string>
    <string name="title_current_input">Current Input</string>
    <string name="flag_image">Flag Image</string>
    <string name="interchange">Interchange</string>
    <string name="refresh">Refresh</string>
    <string name="delete_history">Delete History</string>
    <string name="history">History</string>
    <string name="delete_title">Delete History</string>
    <string name="title_theme">Theme</string>
    <string name="system_default_theme">System Default</string>
    <string name="light_theme_name">Light</string>
    <string name="dark_theme_name">Dark</string>
    <string name="title_about">About</string>
    <string name="message_currency">Currency API Used</string>
    <string name="message_no_history">No History</string>
    <string name="cancel">Cancel</string>
    <string-array name="units">
        <item>Length</item>
        <item>Area</item>
        <item>Mass</item>
        <item>Speed</item>
        <item>Data</item>
        <item>Volume</item>
        <item>Time</item>
        <item>Temperature</item>
        <item>Angle</item>
    </string-array>

</resources>