<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/title_appearance">
        <ListPreference
            android:entries="@array/themes_entries"
            android:entryValues="@array/themes_alias"
            android:key="app_theme"
            android:summary="%s"
            android:title="@string/title_theme"
            app:defaultValue="0" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_about">

        <Preference android:title="@string/message_currency">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://exchangerate.host/" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>