<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="horizontal">

    <Button
        android:id="@+id/slideButton"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:icon="@drawable/ic_arrow_back"
        app:iconGravity="end" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/inverseButton"
                style="@style/DefaultButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/invert" />

            <Button
                android:id="@+id/angleButton"
                style="@style/DefaultButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/degree" />

            <Button
                android:id="@+id/percentButton"
                style="@style/DefaultButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/percent" />

            <Button
                android:id="@+id/rootButton"
                style="@style/DefaultButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/root" />

            <Button
                android:id="@+id/powerButton"
                style="@style/DefaultButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/power" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/sinButton"
                style="@style/DefaultButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sin" />

            <Button
                android:id="@+id/cosButton"
                style="@style/DefaultButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cos" />

            <Button
                android:id="@+id/tanButton"
                style="@style/DefaultButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tan" />

            <Button
                android:id="@+id/naturalLogButton"
                style="@style/DefaultButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/natural_log" />

            <Button
                android:id="@+id/log10Button"
                style="@style/DefaultButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/log" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/piButton"
                style="@style/DefaultButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pi" />

            <Button
                android:id="@+id/eulerNumButton"
                style="@style/DefaultButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/euler_num" />

            <Button
                android:id="@+id/openBracketButton"
                style="@style/DefaultButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/open_bracket" />

            <Button
                android:id="@+id/closeBracketButton"
                style="@style/DefaultButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/close_bracket" />

            <Button
                android:id="@+id/factorialButton"
                style="@style/DefaultButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/factorial" />
        </TableRow>
    </TableLayout>

</LinearLayout>